fix marker not showing

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
 
-#mapid { height: 500px;
-overflow: hidden;}
+#mapid { height: 50vh;
+width: 50vw;}
 
 .leaflet-container {
-  width: 100wh; 
-  height: 100vh;
+  width: 100%; 
+  height: 100%;
 }
 
 @media (prefers-reduced-motion: no-preference) {
